bin/console/src/bottom_pane/chat_composer/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_collapse_empty_full.snap
---
source: bin/console/src/bottom_pane/chat_composer/chat_composer_tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"› Ask Chaos to do anything                                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  ? for shortcuts                                                                                    100% context left  "
