bin/console/src/bottom_pane/chat_composer/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_full.snap
---
source: bin/console/src/bottom_pane/chat_composer/chat_composer_tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"› Test                                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  tab to queue message · Plan mode                                                                    98% context left  "
